# pyquery

./: .gitattributes  .yarnrc.yml  CHANGELOG.md  EDA Guide.md  README.md  app.py  package.json  pyproject.toml
docs/: API.md  CLI.md  SDK.md  UI.md
src/: state_manager.py
src/backend/: engine.py
src/backend/io_plugins/: standard.py
src/backend/transforms/: analytics.py  cleaning.py  columns.py  combine.py  rows.py  scientific.py
src/backend/utils/: helpers.py  io.py  parsing.py
src/components/: export.py  profile.py  recipe_editor.py  sidebar.py
src/core/: io_params.py  models.py  registry.py
src/frontend/: renderers.py  state_manager.py
src/frontend/components/: export.py  profile.py  recipe_editor.py  sidebar.py
src/frontend/steps/: analytics.py  cleaning.py  columns.py  combine.py  rows.py  scientific.py
src/frontend/utils/: dynamic_ui.py
src/pyquery/: __init__.py
src/pyquery-polars/api/: dependencies.py
src/pyquery-polars/api/routes/: datasets.py  recipes.py
src/pyquery-polars/backend/: engine.py
src/pyquery-polars/backend/io_plugins/: standard.py
src/pyquery-polars/backend/transforms/: cleaning.py  columns.py  rows.py
src/pyquery-polars/cli/: main.py
src/pyquery-polars/core/: registry.py
src/pyquery-polars/frontend/: io_schemas.py  registry_init.py  renderers.py
src/pyquery-polars/frontend/components/: profile.py
src/pyquery-polars/frontend/steps/: cleaning.py  columns.py  rows.py
src/pyquery/api/: dependencies.py  main.py
src/pyquery/api/routes/: datasets.py  meta.py  recipes.py
src/pyquery/backend/: engine.py
src/pyquery/backend/io_plugins/: standard.py
src/pyquery/backend/transforms/: analytics.py  cleaning.py  columns.py  combine.py  rows.py  scientific.py
src/pyquery/backend/utils/: io.py
src/pyquery/cli/: headless.py  interactive.py  main.py
src/pyquery/core/: registry.py
src/pyquery/frontend/: app.py  io_schemas.py  registry_init.py  renderers.py  state_manager.py
src/pyquery/frontend/components/: export.py  profile.py  recipe_editor.py  sidebar.py
src/pyquery/frontend/steps/: analytics.py  cleaning.py  columns.py  combine.py  rows.py  scientific.py
src/pyquery/frontend/utils/: dynamic_ui.py
src/pyquery_polars/: __init__.py  main.py
src/pyquery_polars/api/: auth.py  db.py  dependencies.py  main.py
src/pyquery_polars/api/routes/: datasets.py  files.py  meta.py  recipes.py
src/pyquery_polars/backend/: __init__.py  core.py  engine.py
src/pyquery_polars/backend/analysis/: __init__.py  inference.py  joins.py  ml.py  stats.py
src/pyquery_polars/backend/analytics/: __init__.py  inference.py  joins.py  manager.py  ml.py  stats.py
src/pyquery_polars/cli/: __init__.py  branding.py  headless.py  interactive.py  main.py
src/pyquery_polars/core/: io.py  io_params.py  models.py  params.py  project.py  registry.py
src/pyquery_polars/frontend/: app.py  registry_init.py  state_manager.py  styles.py
src/utils/: io.py  parsing.py
(+144 files in other folders)
