[project]
name = "pyquery-polars"
version = "2.1.0"
description = "Enterprise-grade Headless ETL Engine with Interactive UI"
authors = [
  { name="Shan", email="tksudharshan@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["PyQuery", "Polars", "ETL", "Big Data", "Excel", "Power BI", "Automation", "Analytics", "Audit"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Natural Language :: English"
]

dependencies = [
    "polars>=1.0.0",
    "streamlit>=1.30.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.25.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "xlsxwriter>=3.1.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "connectorx>=0.3.3",
    "fastexcel>=0.16.0",
    "python-multipart>=0.0.20",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "plotly>=6.5.0",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
pyquery = "pyquery_polars.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.urls]
Homepage = "https://github.com/tks18/pyquery"
Documentation = "https://github.com/tks18/pyquery#readme"
Repository = "https://github.com/tks18/pyquery"
Issues = "https://github.com/tks18/pyquery/issues"
Changelog = "https://github.com/tks18/pyquery/releases"
